align fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,8 +79,8 @@
 /* World Homepage */
 
 .world{
-  margin-left: 10vw;
-  padding: 2vw;
+  
+  padding: 1vw 3vw;
   margin-top: -5vh;
 }
 .world-title{
